--- a/.github/workflows/Update.yml
+++ b/.github/workflows/Update.yml
@@ -55,11 +55,24 @@ jobs:
       run: |
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
+    
+        # 切换到 main 分支，确保在正确的分支上操作
+        git checkout main
+    
+        # 创建一个新的孤立分支来操作文件
         git checkout --orphan latest_branch
         git add -A
         git commit -am "${GET_TIME}"
-        git branch -D Files
+    
+        # 删除如果存在的 Files 分支（如果有的话）
+        if git show-ref --verify --quiet refs/heads/Files; then
+          git branch -D Files
+        else
+          echo "Branch 'Files' does not exist. Skipping..."
+        fi
+    
+        # 重命名 current branch 为 Files
         git branch -m Files
-
+    
     - name: Push
       run: git push -f origin Files
