--- a/.github/workflows/Update.yml
+++ b/.github/workflows/Update.yml
@@ -75,4 +75,8 @@ jobs:
         git branch -m Files
     
     - name: Push
-      run: git push -f origin Files
+      run: |
+        git push -f https://github.com/${{ github.repository }}.git HEAD:Files
+      env:
+        GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+
