--- a/.github/workflows/Update.yml
+++ b/.github/workflows/Update.yml
@@ -74,10 +74,16 @@ jobs:
         # 重命名 current branch 为 Files
         git branch -m Files
     
-    - name: Push changes
-      run: git push -f https://gentleleaf:${GH_PAT}@github.com/gentleleaf/IPTV.git HEAD:Files
+    - name: Commit and Push to main branch
+      run: |
+        git config --global user.name "GitHub Actions"
+        git config --global user.email "actions@github.com"
+        
+        git add -A
+        git commit -m "Update files" || echo "No changes to commit"
+        git push --force
       env:
-        GH_PAT: ${{ secrets.GH_PAT }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 
 
