--- a/.github/workflows/Update.yml
+++ b/.github/workflows/Update.yml
@@ -51,6 +51,17 @@ jobs:
         rm -f EPG.xml && wget https://epg.112114.xyz/pp.xml -O EPG.xml
         echo "Auto Update IPTV in ${GET_TIME}" > README.md
 
+    - name: Commit and Push to main branch
+      run: |
+        git config --global user.name "GitHub Actions"
+        git config --global user.email "actions@github.com"
+        
+        git add -A
+        git commit -m "Update files" || echo "No changes to commit"
+        git push --force
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
     - name: Clean
       run: |
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
@@ -74,17 +85,8 @@ jobs:
         # 重命名 current branch 为 Files
         git branch -m Files
     
-    - name: Commit and Push to main branch
+    - name: Push changes to GitHub
       run: |
-        git config --global user.name "GitHub Actions"
-        git config --global user.email "actions@github.com"
-        
-        git add -A
-        git commit -m "Update files" || echo "No changes to commit"
-        git push --force
+        git push --set-upstream origin Files
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-
-
-
+        GH_PAT: ${{ secrets.GH_PAT }}
