--- a/.github/workflows/Update.yml
+++ b/.github/workflows/Update.yml
@@ -85,12 +85,6 @@ jobs:
         # 重命名 current branch 为 Files
         git branch -m Files
     
-    - name: Pull latest changes (using merge)
-      run: |
-        git fetch origin
-        git merge --no-edit origin/Files || git reset --hard origin/Files
-    
-    - name: Push changes
-      run: git push origin Files
-
+    - name: Push
+      run: git push -f origin Files
 
