--- a/.github/workflows/Update.yml
+++ b/.github/workflows/Update.yml
@@ -50,13 +50,5 @@ jobs:
         rm -f EPG.xml && wget https://epg.112114.xyz/pp.xml -O EPG.xml
         echo "Auto Update IPTV in ${GET_TIME}" > README.md
 
-    - name: Commit and Push to main branch
-      run: |
-        git config --global user.name "GitHub Actions"
-        git config --global user.email "actions@github.com"
-        
-        git add -A
-        git commit -m "Update files" || echo "No changes to commit"
-        git push --force origin main  # 确保推送到 main 分支
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Push
+      run: git push -f origin Files
