--- a/.github/workflows/Update.yml
+++ b/.github/workflows/Update.yml
@@ -50,5 +50,16 @@ jobs:
         rm -f EPG.xml && wget https://epg.112114.xyz/pp.xml -O EPG.xml
         echo "Auto Update IPTV in ${GET_TIME}" > README.md
 
-    - name: Push
-      run: git push -f origin Files
+    - name: Commit and Push to Files branch
+      run: |
+        git config --global user.name "GitHub Actions"
+        git config --global user.email "actions@github.com"
+        
+        # 确保在 Files 分支上操作
+        git checkout -B Files  # 如果 Files 分支不存在，将创建并切换到它
+
+        git add -A
+        git commit -m "Update files" || echo "No changes to commit"
+        git push -f origin Files  # 推送到 Files 分支
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
